[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_y633d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rs4sq"]
bg_color = Color(0.0941176, 0.0901961, 0.0901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_we42l"]
bg_color = Color(0.223529, 0.223529, 0.207843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7ll2"]
bg_color = Color(0.713726, 0.54902, 0.584314, 1)

[sub_resource type="GDScript" id="GDScript_ynw3j"]
script/source = "extends Node2D

# Align spawn point

func _ready() -> void:
	for spawn_point in self.get_children():
			spawn_point.global_position.x = zone_width * index + zone_width/2
			index += 1
			# TODO here
"

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y633d")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rs4sq")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 15

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LedgerLineContainer" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_we42l")

[node name="LedgerLines" type="HBoxContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Zone1" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone2" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone3" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone4" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone5" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone6" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone7" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone8" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone9" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone10" type="PanelContainer" parent="Background/MarginContainer/Rows/LedgerLineContainer/LedgerLines"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="TargetZones" type="HBoxContainer" parent="Background/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Zone1" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone2" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone3" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone4" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone5" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone6" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone7" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone8" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone9" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="Zone10" type="PanelContainer" parent="Background/MarginContainer/Rows/TargetZones"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_h7ll2")

[node name="LetterContainer" type="Node2D" parent="."]

[node name="SpawnContainer" type="Node2D" parent="."]
script = SubResource("GDScript_ynw3j")

[node name="SpawnPoint1" type="Marker2D" parent="SpawnContainer"]
position = Vector2(64, 0)

[node name="SpawnPoint2" type="Marker2D" parent="SpawnContainer"]
position = Vector2(176, 0)

[node name="SpawnPoint3" type="Marker2D" parent="SpawnContainer"]
position = Vector2(288, 0)

[node name="SpawnPoint4" type="Marker2D" parent="SpawnContainer"]
position = Vector2(400, 0)

[node name="SpawnPoint5" type="Marker2D" parent="SpawnContainer"]
position = Vector2(515, 0)

[node name="SpawnPoint6" type="Marker2D" parent="SpawnContainer"]
position = Vector2(613, 0)

[node name="SpawnPoint7" type="Marker2D" parent="SpawnContainer"]
position = Vector2(742, 0)

[node name="SpawnPoint8" type="Marker2D" parent="SpawnContainer"]
position = Vector2(850, 0)

[node name="SpawnPoint9" type="Marker2D" parent="SpawnContainer"]
position = Vector2(961, 0)

[node name="SpawnPoint10" type="Marker2D" parent="SpawnContainer"]
position = Vector2(1085, 0)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 38.0
offset_top = 87.0
offset_right = 78.0
offset_bottom = 127.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
